--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.co.bepo.image_editing_app">
    <application
+        android:requestLegacyExternalStorage="true"
         android:label="image_editing_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
